SUBDIRS = libsmrender src smrenderd libsmfilter libskel
ACLOCAL_AMFLAGS = -I m4
dist_smrender_data_DATA = rules/rules.osm rules/rulesbig.osm rules/rules_land.osm
available_rulesdir = $(smrender_datadir)/available
dist_available_rules_DATA = \
	rules/available/basemap_col.osm \
	rules/available/basemap.osm \
	rules/available/landfeatures.osm \
	rules/available/legend.osm \
	rules/available/lightsectors_bw.osm \
	rules/available/lightsectors_col.osm \
	rules/available/route.osm \
	rules/available/seamark_area.osm \
	rules/available/seamark_beacon.osm \
	rules/available/seamark_buoy.osm \
	rules/available/seamark_compass.osm \
	rules/available/seamark_topmark.osm \
	rules/available/translation.osm

rules_100000dir = $(smrender_datadir)/rules_100000
r100k_yedir = $(smrender_datadir)/r100k_ye
r100k_coldir = $(smrender_datadir)/r100k_col

install-data-hook:
	if test -e $(DESTDIR)$(r100k_yedir) ; then \
		rm -r $(DESTDIR)$(r100k_yedir) ; \
		fi
	$(MKDIR_P) $(DESTDIR)$(r100k_yedir) && \
		cd $(DESTDIR)$(r100k_yedir) && \
		$(LN_S) ../available/basemap.osm 000basemap.osm && \
		$(LN_S) ../available/translation.osm 001translation.osm && \
		$(LN_S) ../available/landfeatures.osm 010landfeatures.osm && \
		$(LN_S) ../available/route.osm 020route.osm && \
		$(LN_S) ../available/lightsectors_bw.osm 028sectors.osm && \
		$(LN_S) ../available/seamark_area.osm 027area.osm && \
		$(LN_S) ../available/seamark_buoy.osm 029buoy.osm && \
		$(LN_S) ../available/seamark_beacon.osm 030beacon.osm && \
		$(LN_S) ../available/seamark_topmark.osm 031topmark.osm && \
		$(LN_S) ../available/legend.osm 900legend.osm
	if test -e $(DESTDIR)$(rules_100000dir) ; then \
		rm -r $(DESTDIR)$(rules_100000dir) ; \
		fi
	$(LN_S) $(DESTDIR)$(r100k_yedir) $(DESTDIR)$(rules_100000dir)
	if test -e $(DESTDIR)$(r100k_coldir) ; then \
		rm -r $(DESTDIR)$(r100k_coldir) ; \
		fi
	$(MKDIR_P) $(DESTDIR)$(r100k_coldir) && \
		cd $(DESTDIR)$(r100k_coldir) && \
		$(LN_S) ../available/basemap_col.osm 000basemap.osm && \
		$(LN_S) ../available/translation.osm 001translation.osm && \
		$(LN_S) ../available/landfeatures.osm 010landfeatures.osm && \
		$(LN_S) ../available/route.osm 020route.osm && \
		$(LN_S) ../available/lightsectors_col.osm 028sectors.osm && \
		$(LN_S) ../available/seamark_area.osm 027area.osm && \
		$(LN_S) ../available/seamark_buoy.osm 029buoy.osm && \
		$(LN_S) ../available/seamark_beacon.osm 030beacon.osm && \
		$(LN_S) ../available/seamark_topmark.osm 031topmark.osm && \
		$(LN_S) ../available/legend.osm 900legend.osm
	
nodist_bin_SCRIPTS = tools/smfilter2
dist_noinst_SCRIPTS = tools/smfilter2.in

seamapsymbolsdir = $(smrender_datadir)/SeaMapSymbols
dist_seamapsymbols_DATA = \
SeaMapSymbols/Boatyard.svg \
SeaMapSymbols/Notice_Bcp.svg \
SeaMapSymbols/Rescue.svg \
SeaMapSymbols/Notice_Bsi.svg \
SeaMapSymbols/Cone_Black_Red_Black.svg \
SeaMapSymbols/Sphere_Yellow_Black.svg \
SeaMapSymbols/Sphere_White_Yellow.svg \
SeaMapSymbols/Tower_Green_Red_Green.svg \
SeaMapSymbols/Notice_Bol.svg \
SeaMapSymbols/Notice_Blmhr.svg \
SeaMapSymbols/Notice_E9a.svg \
SeaMapSymbols/Tower_Yellow_Black_Yellow.svg \
SeaMapSymbols/Top_Isol_Buoy.svg \
SeaMapSymbols/Notice_E5_14.svg \
SeaMapSymbols/Top_Cone_Buoy.svg \
SeaMapSymbols/Notice_D3b.svg \
SeaMapSymbols/Tower_Red.svg \
SeaMapSymbols/Wind_Motor.svg \
SeaMapSymbols/Spar_Green_White_Green_White.svg \
SeaMapSymbols/Tidal_Scale.svg \
SeaMapSymbols/Harbour.svg \
SeaMapSymbols/Beacon_Black_Red_Black.svg \
SeaMapSymbols/Notice_Pcsl.svg \
SeaMapSymbols/Notice_Bmr.svg \
SeaMapSymbols/Super.svg \
SeaMapSymbols/Chimney.svg \
SeaMapSymbols/Notice_Rowboat.svg \
SeaMapSymbols/Notice_E10e.svg \
SeaMapSymbols/Tower_Green.svg \
SeaMapSymbols/Cone.svg \
SeaMapSymbols/Notice_Slipway.svg \
SeaMapSymbols/Light_Minor.svg \
SeaMapSymbols/Can_Yellow.svg \
SeaMapSymbols/Notice_A20.svg \
SeaMapSymbols/Top_South.svg \
SeaMapSymbols/Sphere_Red_Green_Red.svg \
SeaMapSymbols/Notice_E9c.svg \
SeaMapSymbols/Beacon_Red_Green_Red_Green.svg \
SeaMapSymbols/Stake_Green.svg \
SeaMapSymbols/Beacon_Black_Yellow.svg \
SeaMapSymbols/Beacon_Green_Red_Green.svg \
SeaMapSymbols/Spar_Red_White.svg \
SeaMapSymbols/Notice_B9b.svg \
SeaMapSymbols/Notice_E17.svg \
SeaMapSymbols/Spar_Black_Yellow.svg \
SeaMapSymbols/Cone_Black_Yellow_Black.svg \
SeaMapSymbols/Notice_A7.svg \
SeaMapSymbols/Can_Black_Red_Black.svg \
SeaMapSymbols/Notice_Brb.svg \
SeaMapSymbols/Notice_Anchor.svg \
SeaMapSymbols/Top_Cone_Yellow_Buoy_Small.svg \
SeaMapSymbols/Top_Sphere_Red_Beacon.svg \
SeaMapSymbols/Pillar_Green_Red_Green.svg \
SeaMapSymbols/Spar_Red_Green_Red_Green.svg \
SeaMapSymbols/Top_Can_Float.svg \
SeaMapSymbols/Float_Red_White.svg \
SeaMapSymbols/Notice_C3.svg \
SeaMapSymbols/Spar_Yellow_Black.svg \
SeaMapSymbols/Radar_Reflector_320.svg \
SeaMapSymbols/Triangle_Left.svg \
SeaMapSymbols/Sandwaves.svg \
SeaMapSymbols/Notice_A10a.svg \
SeaMapSymbols/Notice_E1.svg \
SeaMapSymbols/Radar_Reflector_355.svg \
SeaMapSymbols/Beacon.svg \
SeaMapSymbols/Tower_Yellow.svg \
SeaMapSymbols/Sphere_Green_White_Green_White.svg \
SeaMapSymbols/Top_East_Float.svg \
SeaMapSymbols/HarbourMaster.svg \
SeaMapSymbols/Notice_E5_9.svg \
SeaMapSymbols/LandTower.svg \
SeaMapSymbols/Pillar.svg \
SeaMapSymbols/Spar_Green_Red_Green.svg \
SeaMapSymbols/Notice_C4.svg \
SeaMapSymbols/Top_South_Float.svg \
SeaMapSymbols/Turning_Point.svg \
SeaMapSymbols/Triangle_Bottom.svg \
SeaMapSymbols/Notice_E14.svg \
SeaMapSymbols/Notice_Sailboat.svg \
SeaMapSymbols/Sphere.svg \
SeaMapSymbols/Notice_A4_1.svg \
SeaMapSymbols/Float_Black_Yellow.svg \
SeaMapSymbols/Top_X_Yellow_Buoy_Small.svg \
SeaMapSymbols/Notice_P.svg \
SeaMapSymbols/Notice_E9b.svg \
SeaMapSymbols/Sphere_Black_Yellow_Black.svg \
SeaMapSymbols/Spar_Yellow_Black_Yellow.svg \
SeaMapSymbols/Notice_E10a.svg \
SeaMapSymbols/Notice_E5.svg \
SeaMapSymbols/Notice_Blb.svg \
SeaMapSymbols/DeviationDolphin.svg \
SeaMapSymbols/Top_North_Buoy.svg \
SeaMapSymbols/Light.svg \
SeaMapSymbols/Notice_E10b.svg \
SeaMapSymbols/Beacon_Red_White_Red_White.svg \
SeaMapSymbols/Top_Sphere_Red_Green_Float.svg \
SeaMapSymbols/Visitor_Mooring.svg \
SeaMapSymbols/Top_Sphere_Red_Buoy.svg \
SeaMapSymbols/Sphere_Yellow.svg \
SeaMapSymbols/Notice_B3a.svg \
SeaMapSymbols/Windsock.svg \
SeaMapSymbols/Cone_Yellow_Black_Yellow.svg \
SeaMapSymbols/Triangle_Right.svg \
SeaMapSymbols/Bollard.svg \
SeaMapSymbols/Rock.svg \
SeaMapSymbols/Beacon_Green.svg \
SeaMapSymbols/Notice_Turn.svg \
SeaMapSymbols/Notice_A8.svg \
SeaMapSymbols/Perch_Port.svg \
SeaMapSymbols/Top_Can_Red_White_Red_Beacon.svg \
SeaMapSymbols/Notice_A15.svg \
SeaMapSymbols/Top_X_Yellow_Buoy.svg \
SeaMapSymbols/Notice_D1a.svg \
SeaMapSymbols/Float_Red_White_Red_White.svg \
SeaMapSymbols/Top_Cone_Red_Buoy.svg \
SeaMapSymbols/Cone_Green_Red_Green.svg \
SeaMapSymbols/Notice_E9d.svg \
SeaMapSymbols/Notice_B1a.svg \
SeaMapSymbols/Withy_Port.svg \
SeaMapSymbols/MarinaNF.svg \
SeaMapSymbols/Notice_Bnank.svg \
SeaMapSymbols/Seaplane.svg \
SeaMapSymbols/Top_Triangle.svg \
SeaMapSymbols/Top_West_Beacon.svg \
SeaMapSymbols/Notice_B3b.svg \
SeaMapSymbols/Top_Square_Yellow_Black_Yellow_Beacon.svg \
SeaMapSymbols/Notice_E5_7.svg \
SeaMapSymbols/Crane.svg \
SeaMapSymbols/Can_Black_Yellow.svg \
SeaMapSymbols/Top_West_Float.svg \
SeaMapSymbols/Notice_A1.svg \
SeaMapSymbols/Top_Mooring.svg \
SeaMapSymbols/Notice_Motor.svg \
SeaMapSymbols/Top_Triangle_Inv_Red_Beacon.svg \
SeaMapSymbols/Notice_Bwlar.svg \
SeaMapSymbols/Notice_VHF.svg \
SeaMapSymbols/Notice_E23.svg \
SeaMapSymbols/Lock.svg \
SeaMapSymbols/SailingClub.svg \
SeaMapSymbols/Top_Square_Beacon.svg \
SeaMapSymbols/Pillar_Black_Yellow.svg \
SeaMapSymbols/Pillar_Yellow.svg \
SeaMapSymbols/No_Wake.svg \
SeaMapSymbols/Notice_A14.svg \
SeaMapSymbols/Notice_A4.svg \
SeaMapSymbols/Notice_A5.svg \
SeaMapSymbols/Radar_Reflector_280.svg \
SeaMapSymbols/Top_Square_White_Red_Beacon.svg \
SeaMapSymbols/MarineFarm.svg \
SeaMapSymbols/Flagstaff.svg \
SeaMapSymbols/Restricted.svg \
SeaMapSymbols/Pillar_Green.svg \
SeaMapSymbols/Windmill.svg \
SeaMapSymbols/Top_Can_Yellow_Float.svg \
SeaMapSymbols/Top_Isol_Buoy_Small.svg \
SeaMapSymbols/Cairn.svg \
SeaMapSymbols/Top_Sphere.svg \
SeaMapSymbols/Notice_B6.svg \
SeaMapSymbols/Notice_E7.svg \
SeaMapSymbols/Spar_Green.svg \
SeaMapSymbols/Tower_Black_Yellow_Black.svg \
SeaMapSymbols/Pipeline.svg \
SeaMapSymbols/Float_Red.svg \
SeaMapSymbols/Top_Triangle_Inv_White_Red_Beacon.svg \
SeaMapSymbols/Top_North.svg \
SeaMapSymbols/WreckS.svg \
SeaMapSymbols/Top_Triangle_White_Green_Beacon.svg \
SeaMapSymbols/Notice_Waterbike.svg \
SeaMapSymbols/Top_Diamond_Green_White_Beacon.svg \
SeaMapSymbols/Float_Black_Red_Black.svg \
SeaMapSymbols/Can_Red_White_Red_White.svg \
SeaMapSymbols/Notice_Pcpr.svg \
SeaMapSymbols/Top_X_Red_Float.svg \
SeaMapSymbols/Top_Cone_Red_Float.svg \
SeaMapSymbols/DishAerial.svg \
SeaMapSymbols/Top_South_Buoy.svg \
SeaMapSymbols/Notice_E8.svg \
SeaMapSymbols/Pillar_Red.svg \
SeaMapSymbols/Notice_Bsm.svg \
SeaMapSymbols/Notice_Speedboat.svg \
SeaMapSymbols/Notice_E22.svg \
SeaMapSymbols/Notice_Pwlarr.svg \
SeaMapSymbols/ChurchTower.svg \
SeaMapSymbols/Top_Cone_Red_Beacon.svg \
SeaMapSymbols/Shower.svg \
SeaMapSymbols/Top_X_Yellow_Float.svg \
SeaMapSymbols/Notice_E9e.svg \
SeaMapSymbols/Top_Diamond_Beacon.svg \
SeaMapSymbols/Top_Cone_Inv_Red_Beacon.svg \
SeaMapSymbols/Notice_E4b.svg \
SeaMapSymbols/Stake_Yellow.svg \
SeaMapSymbols/Notice_B4b.svg \
SeaMapSymbols/Beacon_Green_White_Green_White.svg \
SeaMapSymbols/Wind_Farm.svg \
SeaMapSymbols/Notice_E7_1.svg \
SeaMapSymbols/Top_Sphere_Red_Green_Beacon.svg \
SeaMapSymbols/Customs.svg \
SeaMapSymbols/Notice_E5_12.svg \
SeaMapSymbols/Notice_D3a.svg \
SeaMapSymbols/Top_Can_Green_Buoy_Small.svg \
SeaMapSymbols/Top_X_Red_Buoy.svg \
SeaMapSymbols/Clear_V.svg \
SeaMapSymbols/Notice_D1b.svg \
SeaMapSymbols/Spar_Black_Red_Black.svg \
SeaMapSymbols/Notice_Bbm.svg \
SeaMapSymbols/Notice_B2b.svg \
SeaMapSymbols/Lock_Gate_Single.svg \
SeaMapSymbols/Storage.svg \
SeaMapSymbols/Sphere_Black_Red_Black.svg \
SeaMapSymbols/RadioMast.svg \
SeaMapSymbols/Temple.svg \
SeaMapSymbols/Lock_Gate.svg \
SeaMapSymbols/Top_West.svg \
SeaMapSymbols/Top_Cone_Yellow_Float.svg \
SeaMapSymbols/Cross.svg \
SeaMapSymbols/Pillar_Yellow_Black_Yellow.svg \
SeaMapSymbols/Top_Board.svg \
SeaMapSymbols/Dolphin.svg \
SeaMapSymbols/Top_Sphere_Float.svg \
SeaMapSymbols/Ice.svg \
SeaMapSymbols/Top_Diamond_White_Green_Beacon.svg \
SeaMapSymbols/Fog_Signal.svg \
SeaMapSymbols/Notice_Bor.svg \
SeaMapSymbols/Fuel.svg \
SeaMapSymbols/Notice_A10b.svg \
SeaMapSymbols/Clear_H.svg \
SeaMapSymbols/Pump_Out.svg \
SeaMapSymbols/Top_TriangleD.svg \
SeaMapSymbols/Notice_C5a.svg \
SeaMapSymbols/Top_Cone_Beacon.svg \
SeaMapSymbols/Top_West_Buoy_Small.svg \
SeaMapSymbols/Top_Cone_Inv.svg \
SeaMapSymbols/Notice_Crossing.svg \
SeaMapSymbols/LaneArrow.svg \
SeaMapSymbols/Notice_E16.svg \
SeaMapSymbols/Notice_A12.svg \
SeaMapSymbols/Top_Can_Red_White_Red_Barrel.svg \
SeaMapSymbols/Notice_E10f.svg \
SeaMapSymbols/Toilet.svg \
SeaMapSymbols/Sphere_Red.svg \
SeaMapSymbols/Notice_Pmrl.svg \
SeaMapSymbols/Notice_Bcs.svg \
SeaMapSymbols/Notice_Pcsr.svg \
SeaMapSymbols/Notice_E9f.svg \
SeaMapSymbols/Sphere_Black_Yellow.svg \
SeaMapSymbols/Notice_Waterski.svg \
SeaMapSymbols/Notice_Psmr.svg \
SeaMapSymbols/Top_X.svg \
SeaMapSymbols/Spar.svg \
SeaMapSymbols/Beacon_Red.svg \
SeaMapSymbols/LineAnchor.svg \
SeaMapSymbols/Light_Major.svg \
SeaMapSymbols/Hospital.svg \
SeaMapSymbols/Top_South_Beacon.svg \
SeaMapSymbols/Cable.svg \
SeaMapSymbols/Tower_Yellow_Black.svg \
SeaMapSymbols/Notice_A2.svg \
SeaMapSymbols/Notice_D2a.svg \
SeaMapSymbols/Top_Sphere_Red_Float.svg \
SeaMapSymbols/WreckD.svg \
SeaMapSymbols/Light_House.svg \
SeaMapSymbols/Notice_E21.svg \
SeaMapSymbols/Can_Yellow_Black_Yellow.svg \
SeaMapSymbols/Notice_Junction.svg \
SeaMapSymbols/Sphere_Red_Green_Red_Green.svg \
SeaMapSymbols/Float_Red_Green_Red_Green.svg \
SeaMapSymbols/Top_X_Yellow_Beacon.svg \
SeaMapSymbols/Waste_Disposal.svg \
SeaMapSymbols/Cone_Red_Green_Red.svg \
SeaMapSymbols/Light_Green_120.svg \
SeaMapSymbols/Tower_Red_Green_Red_Green.svg \
SeaMapSymbols/Notice_Bollard.svg \
SeaMapSymbols/Light_White_120.svg \
SeaMapSymbols/Notice_B7.svg \
SeaMapSymbols/Church.svg \
SeaMapSymbols/Top_Can_Green_Beacon.svg \
SeaMapSymbols/Notice_E3.svg \
SeaMapSymbols/Board_Bottom.svg \
SeaMapSymbols/Notice_Crossing_L.svg \
SeaMapSymbols/Notice_B11.svg \
SeaMapSymbols/Top_ConesDU_Beacon.svg \
SeaMapSymbols/Anchor_Berth.svg \
SeaMapSymbols/Notice_A6.svg \
SeaMapSymbols/Notice_E24.svg \
SeaMapSymbols/Top_Can_Green_Float.svg \
SeaMapSymbols/Notice_E9g.svg \
SeaMapSymbols/Signal_Station.svg \
SeaMapSymbols/Beacon_Yellow_Black.svg \
SeaMapSymbols/Float_Green.svg \
SeaMapSymbols/Tide_Gauge.svg \
SeaMapSymbols/Top_East_Beacon.svg \
SeaMapSymbols/Notice_E10d.svg \
SeaMapSymbols/Light_Green_240.svg \
SeaMapSymbols/Pillar_Black_Red_Black.svg \
SeaMapSymbols/Top_Triangle_Inv_Beacon.svg \
SeaMapSymbols/Spar_Black_Yellow_Black.svg \
SeaMapSymbols/LinePlane.svg \
SeaMapSymbols/Top_Cone_Float.svg \
SeaMapSymbols/Notice_E5_1.svg \
SeaMapSymbols/Board_Top.svg \
SeaMapSymbols/Tower_Red_Green_Red.svg \
SeaMapSymbols/Notice_Pmrr.svg \
SeaMapSymbols/Sphere_Green_Red_Green.svg \
SeaMapSymbols/Notice_Junction_R.svg \
SeaMapSymbols/Float_Black_Yellow_Black.svg \
SeaMapSymbols/Barrel_Yellow.svg \
SeaMapSymbols/Top_Triangle_Green_Beacon.svg \
SeaMapSymbols/Notice_A19.svg \
SeaMapSymbols/Can_Red_Green_Red.svg \
SeaMapSymbols/Top_Cone.svg \
SeaMapSymbols/Top_Mooring_Float.svg \
SeaMapSymbols/Top_Cone_Yellow_Buoy.svg \
SeaMapSymbols/Notice_E10c.svg \
SeaMapSymbols/Notice_B2a.svg \
SeaMapSymbols/Cone_Green_White_Green_White.svg \
SeaMapSymbols/Notice_Pwlarl.svg \
SeaMapSymbols/Notice_E5_15.svg \
SeaMapSymbols/Top_South_Buoy_Small.svg \
SeaMapSymbols/Notice_E6.svg \
SeaMapSymbols/Spire.svg \
SeaMapSymbols/Beacon_Red_Green_Red.svg \
SeaMapSymbols/Top_Can_Green_Buoy.svg \
SeaMapSymbols/Notice_Ppml.svg \
SeaMapSymbols/Pillar_Green_White_Green_White.svg \
SeaMapSymbols/Light_White_240.svg \
SeaMapSymbols/Notice_Bpm.svg \
SeaMapSymbols/Notice_A18.svg \
SeaMapSymbols/Dome.svg \
SeaMapSymbols/LandingSteps.svg \
SeaMapSymbols/Notice_E4a.svg \
SeaMapSymbols/Notice_Ppmr.svg \
SeaMapSymbols/DistanceI.svg \
SeaMapSymbols/Top_X_Red_Buoy_Small.svg \
SeaMapSymbols/Notice_Pwralr.svg \
SeaMapSymbols/ChurchSpire.svg \
SeaMapSymbols/Float_Yellow_Black.svg \
SeaMapSymbols/Cone_Black_Yellow.svg \
SeaMapSymbols/Top_Sphere_Red_Green_Buoy.svg \
SeaMapSymbols/Sphere_Green.svg \
SeaMapSymbols/Notice.svg \
SeaMapSymbols/Notice_E5_10.svg \
SeaMapSymbols/Pillar_Red_Green_Red_Green.svg \
SeaMapSymbols/ContainerCrane.svg \
SeaMapSymbols/Tower_Black_Yellow.svg \
SeaMapSymbols/Top_Can.svg \
SeaMapSymbols/Top_Isol_Float.svg \
SeaMapSymbols/Can_Green_Red_Green.svg \
SeaMapSymbols/Float_Green_Red_Green.svg \
SeaMapSymbols/Notice_E5_4.svg \
SeaMapSymbols/Notice_A.svg \
SeaMapSymbols/Notice_E9i.svg \
SeaMapSymbols/Notice_E9h.svg \
SeaMapSymbols/Barrel.svg \
SeaMapSymbols/Dot.svg \
SeaMapSymbols/Notice_Pcpl.svg \
SeaMapSymbols/Radar_Reflector_305.svg \
SeaMapSymbols/Top_Sphere_Red_Green_Buoy_Small.svg \
SeaMapSymbols/Notice_D2b.svg \
SeaMapSymbols/DistanceU.svg \
SeaMapSymbols/Notice_Brs.svg \
SeaMapSymbols/Float_Red_Green_Red.svg \
SeaMapSymbols/Pillar_Red_White.svg \
SeaMapSymbols/harbour_master.svg \
SeaMapSymbols/LLight.svg \
SeaMapSymbols/Minaret.svg \
SeaMapSymbols/Notice_E18.svg \
SeaMapSymbols/Top_Cone_Red_Buoy_Small.svg \
SeaMapSymbols/Sphere_Red_White_Red_White.svg \
SeaMapSymbols/Top_Triangle_Beacon.svg \
SeaMapSymbols/Notice_E11.svg \
SeaMapSymbols/Pillar_Yellow_Black.svg \
SeaMapSymbols/Top_Can_Red_Beacon.svg \
SeaMapSymbols/Top_Sphere_Red_Buoy_Small.svg \
SeaMapSymbols/Top_North_Buoy_Small.svg \
SeaMapSymbols/Top_Can_Yellow_Beacon.svg \
SeaMapSymbols/Notice_E5_8.svg \
SeaMapSymbols/Pilot.svg \
SeaMapSymbols/ChurchDome.svg \
SeaMapSymbols/WreckND.svg \
SeaMapSymbols/Top_X_Beacon.svg \
SeaMapSymbols/Float_Yellow.svg \
SeaMapSymbols/Float_Yellow_Black_Yellow.svg \
SeaMapSymbols/Notice_Proceed.svg \
SeaMapSymbols/Marina.svg \
SeaMapSymbols/Notice_E5_6.svg \
SeaMapSymbols/Fishing_Harbour.svg \
SeaMapSymbols/Notice_Junction_L.svg \
SeaMapSymbols/Top_Sphere_Beacon.svg \
SeaMapSymbols/Cone_Yellow.svg \
SeaMapSymbols/Top_North_Beacon.svg \
SeaMapSymbols/Notice_Sailboard.svg \
SeaMapSymbols/Super_Yellow.svg \
SeaMapSymbols/Top_Mooring_Buoy_Small.svg \
SeaMapSymbols/Notice_E2.svg \
SeaMapSymbols/Tower_Black_Red_Black.svg \
SeaMapSymbols/Top_Isol_Beacon.svg \
SeaMapSymbols/Notice_A16.svg \
SeaMapSymbols/Top_ConeD.svg \
SeaMapSymbols/Light_Red_120.svg \
SeaMapSymbols/Notice_B5.svg \
SeaMapSymbols/Platform.svg \
SeaMapSymbols/Slipway.svg \
SeaMapSymbols/Top_Diamond_Yellow_Black_Yellow_Beacon.svg \
SeaMapSymbols/Top_X_Float.svg \
SeaMapSymbols/Top_Can_Buoy.svg \
SeaMapSymbols/Perch_Starboard.svg \
SeaMapSymbols/Notice_A1a.svg \
SeaMapSymbols/Sphere_Yellow_Black_Yellow.svg \
SeaMapSymbols/Withy_Starboard.svg \
SeaMapSymbols/Radar_Reflector.svg \
SeaMapSymbols/Spar_Yellow.svg \
SeaMapSymbols/Top_Cone_Buoy_Small.svg \
SeaMapSymbols/Can_Yellow_Black.svg \
SeaMapSymbols/Can_Green.svg \
SeaMapSymbols/Top_North_Float.svg \
SeaMapSymbols/Sphere_Red_White.svg \
SeaMapSymbols/Notice_E19.svg \
SeaMapSymbols/Beacon_Black_Yellow_Black.svg \
SeaMapSymbols/Notice_E13.svg \
SeaMapSymbols/WaterTower.svg \
SeaMapSymbols/Spar_Red_Green_Red.svg \
SeaMapSymbols/Notice_Pwrall.svg \
SeaMapSymbols/Top_ConesDU_Red_Green_Beacon.svg \
SeaMapSymbols/Notice_Sport.svg \
SeaMapSymbols/Monument.svg \
SeaMapSymbols/Notice_E15.svg \
SeaMapSymbols/Laundrette.svg \
SeaMapSymbols/Top_East_Buoy.svg \
SeaMapSymbols/Spar_Red_White_Red_White.svg \
SeaMapSymbols/Top_East.svg \
SeaMapSymbols/Mast.svg \
SeaMapSymbols/Top_X_Buoy_Small.svg \
SeaMapSymbols/Notice_E5_5.svg \
SeaMapSymbols/Light_Red_240.svg \
SeaMapSymbols/Top_Can_Red_White_Red_Buoy.svg \
SeaMapSymbols/Lock_Single.svg \
SeaMapSymbols/Notice_B.svg \
SeaMapSymbols/Top_Square.svg \
SeaMapSymbols/Notice_A3.svg \
SeaMapSymbols/Pillar_Red_White_Red_White.svg \
SeaMapSymbols/Top_X_Red_Beacon.svg \
SeaMapSymbols/RockC.svg \
SeaMapSymbols/Notice_Psml.svg \
SeaMapSymbols/Notice_A17.svg \
SeaMapSymbols/Radar_Reflector_250.svg \
SeaMapSymbols/Tower.svg \
SeaMapSymbols/Top_Cone_Green_Beacon.svg \
SeaMapSymbols/Chandler.svg \
SeaMapSymbols/Anchorage.svg \
SeaMapSymbols/Notice_E5_13.svg \
SeaMapSymbols/Top_Can_Red_Float.svg \
SeaMapSymbols/Can.svg \
SeaMapSymbols/Top_Cross_Beacon.svg \
SeaMapSymbols/Top_East_Buoy_Small.svg \
SeaMapSymbols/Top_Cross_Yellow_Beacon.svg \
SeaMapSymbols/Notice_E20.svg \
SeaMapSymbols/Notice_Bwral.svg \
SeaMapSymbols/Top_Can_Buoy_Small.svg \
SeaMapSymbols/Top_Isol.svg \
SeaMapSymbols/Top_Square_White_Red_White_Beacon.svg \
SeaMapSymbols/Tower_Red_White_Red_White.svg \
SeaMapSymbols/Notice_B9a.svg \
SeaMapSymbols/Top_Cone_Yellow_Beacon.svg \
SeaMapSymbols/Triangle.svg \
SeaMapSymbols/Top_Triangle_Inv.svg \
SeaMapSymbols/Sphere_Yellow_Red.svg \
SeaMapSymbols/Cone_Red.svg \
SeaMapSymbols/Visitor_Berth.svg \
SeaMapSymbols/Spar_Red.svg \
SeaMapSymbols/Notice_C1.svg \
SeaMapSymbols/Top_Sphere_Buoy.svg \
SeaMapSymbols/Can_Black_Yellow_Black.svg \
SeaMapSymbols/Top_Cone_Green_Buoy.svg \
SeaMapSymbols/Top_Can_Red_White_Red_Buoy_Small.svg \
SeaMapSymbols/Notice_E5_3.svg \
SeaMapSymbols/Notice_B1b.svg \
SeaMapSymbols/Beacon_Yellow.svg \
SeaMapSymbols/Notice_A13.svg \
SeaMapSymbols/Pillar_Black_Yellow_Black.svg \
SeaMapSymbols/Post.svg \
SeaMapSymbols/Notice_C5b.svg \
SeaMapSymbols/Tower_Green_White_Green_White.svg \
SeaMapSymbols/Notice_A5_1.svg \
SeaMapSymbols/Notice_B8.svg \
SeaMapSymbols/Notice_Crossing_R.svg \
SeaMapSymbols/Notice_C2.svg \
SeaMapSymbols/Notice_E5_11.svg \
SeaMapSymbols/Can_Red.svg \
SeaMapSymbols/Radar_Station.svg \
SeaMapSymbols/Top_West_Buoy.svg \
SeaMapSymbols/Top_X_Buoy.svg \
SeaMapSymbols/Top_Can_Beacon.svg \
SeaMapSymbols/RockA.svg \
SeaMapSymbols/Cone_Green.svg \
SeaMapSymbols/Cone_Red_Green_Red_Green.svg \
SeaMapSymbols/Notice_A9.svg \
SeaMapSymbols/Super_Black.svg \
SeaMapSymbols/Top_Cone_Inv_Beacon.svg \
SeaMapSymbols/Beacon_Yellow_Black_Yellow.svg \
SeaMapSymbols/Top_Cone_Green_Float.svg \
SeaMapSymbols/Beacon_Red_White.svg \
SeaMapSymbols/Top_Diamond.svg \
SeaMapSymbols/Float_Green_White_Green_White.svg \
SeaMapSymbols/Top_Sphere_Buoy_Small.svg \
SeaMapSymbols/Cone_Yellow_Black.svg \
SeaMapSymbols/Pillar_Red_Green_Red.svg \
SeaMapSymbols/Light_Magenta_120.svg \
SeaMapSymbols/Notice_E5_2.svg \
SeaMapSymbols/Notice_B4a.svg \
SeaMapSymbols/Stake_Red.svg \
SeaMapSymbols/Notice_E.svg \
SeaMapSymbols/Float.svg \
SeaMapSymbols/Stake.svg \
SeaMapSymbols/Top_Cone_Green_Buoy_Small.svg \
SeaMapSymbols/Top_Cross.svg \
SeaMapSymbols/FlareStack.svg \
SeaMapSymbols/Can_Red_Green_Red_Green.svg \
SeaMapSymbols/Top_Can_Red_Buoy.svg \
SeaMapSymbols/PortCrane.svg \
SeaMapSymbols/LoLcaption.svg \
SeaMapSymbols/Top_Can_Red_Buoy_Small.svg \
SeaMapSymbols/Top_Can_Yellow_Buoy.svg \
SeaMapSymbols/Top_Can_Yellow_Buoy_Small.svg

